--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -49,6 +49,12 @@
       <version>1.1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
+      <version>31.1-jre</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
