--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -59,6 +59,7 @@
       <groupId>com.google.errorprone</groupId>
       <artifactId>error_prone_annotations</artifactId>
       <version>2.18.0</version>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
