--- a/pom.xml
+++ b/pom.xml
@@ -291,6 +291,15 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>JDK11</id>
+      <activation>
+        <jdk>(,11]</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.testRelease>11</maven.compiler.testRelease>
+      </properties>
+    </profile>
     <!-- Disable Error Prone in Java 15 -->
     <profile>
       <id>jdk15</id>
