Fix configuration parameter name
For the Javadoc plugin it is "warnings" (plural) instead of "warning"

--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
             <detectOfflineLinks>false</detectOfflineLinks>
             <!-- Only show warnings and errors -->
             <quiet>true</quiet>
-            <failOnWarning>true</failOnWarning>
+            <failOnWarnings>true</failOnWarnings>
           </configuration>
         </plugin>
         <plugin>
