Adds back the `failOnWarning` configuration

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
           <configuration>
             <showWarnings>true</showWarnings>
             <showDeprecation>true</showDeprecation>
+            <failOnWarning>true</failOnWarning>
             <fork>true</fork>
             <compilerArgs>
               <!-- Args related to Error Prone, see: https://errorprone.info/docs/installation#maven -->
