--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.11.0</version>
+    <version>2.11.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
@@ -30,7 +30,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T17:21:46Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-05-19T17:23:39Z</project.build.outputTimestamp>
   </properties>
 
   <licenses>
