--- a/jpms-test/pom.xml
+++ b/jpms-test/pom.xml
@@ -1,5 +1,5 @@
 <!--
-  Copyright 2023 Google Inc.
+  Copyright 2024 Google Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -14,7 +14,6 @@
   limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -22,18 +21,16 @@
     <artifactId>gson-parent</artifactId>
     <version>2.11.1-SNAPSHOT</version>
   </parent>
-  <artifactId>graal-native-image-test</artifactId>
-  <name>Test: GraalVM Native Image</name>
+  <artifactId>jpms-test</artifactId>
+  <name>Test: Java Platform Module System (JPMS)</name>
 
   <properties>
+    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.testRelease>${maven.compiler.release}</maven.compiler.testRelease>
+
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
     <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
-
-    <!-- GraalVM is JDK >= 17, however for build with regular JDK these tests
-      are also executed with JDK 11, so for them exclude JDK 17 specific tests -->
-    <maven.compiler.testRelease>11</maven.compiler.testRelease>
-    <excludeTestCompilation>**/Java17*</excludeTestCompilation>
   </properties>
 
   <dependencies>
@@ -43,17 +40,11 @@
       <version>${project.parent.version}</version>
     </dependency>
 
-    <!-- Graal Native Maven Plugin requires using JUnit Platform (JUnit 5), see
-      https://graalvm.github.io/native-build-tools/latest/maven-plugin.html#testing-support
-      This also supports using JUnit Vintage to run JUnit 4 tests, but for simplicity
-      completely use JUnit 5 here and no JUnit 4 at all -->
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.10.2</version>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
@@ -115,68 +106,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <executions>
-          <!-- Adjust standard `default-testCompile` execution -->
-          <execution>
-            <id>default-testCompile</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <configuration>
-              <testExcludes>
-                <exclude>${excludeTestCompilation}</exclude>
-              </testExcludes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>JDK17</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <maven.compiler.testRelease>17</maven.compiler.testRelease>
-        <excludeTestCompilation />
-      </properties>
-    </profile>
-
-    <profile>
-      <id>native-image-test</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.graalvm.buildtools</groupId>
-            <artifactId>native-maven-plugin</artifactId>
-            <version>0.10.1</version>
-            <extensions>true</extensions>
-            <executions>
-              <execution>
-                <id>test-native</id>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <quickBuild>true</quickBuild>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
